--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,34 @@
+// tsconfig.json
 {
-  "include": ["**/*.ts", "**/*.tsx"],
   "compilerOptions": {
+    // Language & emit
     "target": "ES2022",
-    "jsx": "react-jsx",
     "module": "ESNext",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "types": ["vite/client"],
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
-
-    /* Linting */
     "skipLibCheck": true,
+
+    // Strictness
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedIndexedAccess": true,
+    // "noUncheckedSideEffectImports": true, // TS 5.8+ only → comment out for now
+
+    // JSX
+    "jsx": "react-jsx",
+
+    // Path mapping
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
-  }
+  },
+  "include": ["src", "vite.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
